@@ -26,12 +26,12 @@ class MatrixStack:
         self.operation_stack.append((0, dx, dy, dz))
         return len(self.operation_stack) - 1
 
-    def addRotate3d(self, rx: float, ry: float, rz: float) -> int:
+    def addRotate3d(self, v: float, rx: float, ry: float, rz: float) -> int:
         """
         will add an glRotated()-call
         :return: the operation id
         """
-        self.operation_stack.append((1, rx, ry, rz))
+        self.operation_stack.append((1, v, rx, ry, rz))
         return len(self.operation_stack) - 1
 
     def addScale3d(self, sx: float, sy: float, sz: float) -> int:
@@ -40,6 +40,21 @@ class MatrixStack:
         :return: the operation id
         """
         self.operation_stack.append((2, sx, sy, sz))
+        return len(self.operation_stack) - 1
+
+    def addViewport(self, *args):
+        self.operation_stack.append((3,)+args)
+        return len(self.operation_stack) - 1
+
+    def addMatrixMode(self, mode):
+        self.operation_stack.append((4, mode))
+        return len(self.operation_stack) - 1
+
+    def addLoadIdentity(self):
+        self.operation_stack.append((5,))
+
+    def addGluPerspective(self, *args):
+        self.operation_stack.append((6,)+args)
         return len(self.operation_stack) - 1
 
     def modifyOperation(self, operation_id: int, *data):
@@ -86,4 +101,55 @@ class MatrixStack:
                 _gl.glRotated(*d)
             elif opcode == 2:
                 _gl.glScaled(*d)
+            elif opcode == 3:
+                _gl.glViewport(*d[0])
+            elif opcode == 4:
+                _gl.glMatrixMode(d[0])
+            elif opcode == 5:
+                _gl.glLoadIdentity()
+            elif opcode == 6:
+                _gl.gluPerspective(*d[0])
+
+
+class LinkedMatrixStack(MatrixStack):
+    """
+    Matrix stack for dynamically generated values
+    """
+
+    def addTranslate3d(self, *args) -> int:
+        self.operation_stack.append((0,)+args)
+        return len(self.operation_stack) - 1
+
+    def addRotate3d(self, *args) -> int:
+        self.operation_stack.append((1,)+args)
+        return len(self.operation_stack) - 1
+
+    def addScale3d(self, *args) -> int:
+        self.operation_stack.append((2,)+args)
+        return len(self.operation_stack) - 1
+
+    def apply(self):
+        """
+        will apply the configuration onto the system. Will reset all present transformations
+        """
+        _gl.glLoadIdentity()
+        for opcode, *d in self.operation_stack:
+            if opcode == 0:
+                _gl.glTranslated(*([e if not callable(e) else e() for e in d] if not callable(d[0]) or len(d) != 1 else
+                                   d[0]()))
+            elif opcode == 1:
+                _gl.glRotated(*([e if not callable(e) else e() for e in d] if not callable(d[0]) or len(d) != 1 else
+                                d[0]()))
+            elif opcode == 2:
+                _gl.glScaled(*[e if not callable(e) else e() for e in d])
+            elif opcode == 3:
+                _gl.glViewport(*([e if not callable(e) else e() for e in d] if not callable(d[0]) or len(d) != 1 else
+                                 d[0]()))
+            elif opcode == 4:
+                _gl.glMatrixMode(d[0] if not callable(d[0]) else d[0]())
+            elif opcode == 5:
+                _gl.glLoadIdentity()
+            elif opcode == 6:
+                _gl.gluPerspective(*([e if not callable(e) else e() for e in d] if not callable(d[0]) or len(d) != 1
+                                     else d[0]()))
 
